# PyMolAlign

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pytest.yml  wheel.yml
fortran/: CMakeLists.txt  chemdata.f90  lap_sparse.f90  meson.build  molalign.pyf  permutation.f90  rnglib.f90  sorting.f90
pymolalign/: __init__.py  _molalign_qcuaeh.pyf  result.py  solver.py
tests/: test_case-2.py  test_case.py
